# doit

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  PLANS.md  README.md  README.zh-CN.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
docs/: interactive-design.md
locales/: en.toml  zh-CN.toml
scripts/: install.sh
src/: cli.rs  context.rs  error.rs  i18n.rs  lib.rs  main.rs  pty.rs
src/agent/: mod.rs  shell.rs
src/backend/: deepseek.rs  mod.rs  types.rs
src/block/: jsonl.rs  mod.rs  render.rs
src/commands/: interactive.rs  mod.rs  resume.rs  run.rs  task.rs
src/commands/config/: mod.rs
src/commands/config/locales/: en.toml  zh-CN.toml
src/commands/edit/: mod.rs
src/commands/edit/locales/: en.toml  zh-CN.toml
src/commands/edit/tests/integration/: main.rs
src/commands/edit/tests/integration/snapshots/: edit_integration__edit_diff.snap  edit_integration__edit_lines.snap  edit_integration__edit_regex.snap
src/commands/exec/: mod.rs
src/commands/exec/locales/: en.toml  zh-CN.toml
src/commands/exec/tests/integration/: main.rs
src/commands/exec/tests/integration/snapshots/: exec_integration__exec_truncated.snap
src/commands/exit/: mod.rs
src/commands/exit/locales/: en.toml  zh-CN.toml
src/commands/exit/tests/integration/: main.rs
src/commands/glob/: mod.rs
src/commands/glob/locales/: en.toml  zh-CN.toml
src/commands/glob/tests/integration/: main.rs
src/commands/glob/tests/integration/snapshots/: glob_integration__glob_matches_files.snap
src/commands/interactive/: mod.rs
src/commands/interactive/locales/: en.toml
src/commands/prompt/: mod.rs
src/commands/prompt/locales/: en.toml  zh-CN.toml
src/commands/prompt/tests/integration/: main.rs
src/commands/prompt/tests/integration/snapshots/: prompt_integration__prompt_non_tty.snap
src/commands/read/: mod.rs
src/commands/read/locales/: en.toml  zh-CN.toml
src/commands/read/tests/integration/: main.rs
src/commands/read/tests/integration/snapshots/: read_integration__read_full_file.snap  read_integration__read_lines_range.snap  read_integration__read_truncated.snap
src/commands/search/: mod.rs
src/commands/search/locales/: en.toml  zh-CN.toml
src/commands/search/tests/integration/: main.rs
src/commands/search/tests/integration/snapshots/: search_integration__search_basic.snap  search_integration__search_no_match.snap
src/commands/task/: mod.rs
src/commands/task/locales/: en.toml  zh-CN.toml
src/commands/template/: mod.rs
src/commands/template/locales/: en.toml  zh-CN.toml
src/commands/template/tests/integration/: main.rs
src/commands/template/tests/integration/snapshots/: template_integration__template_system_interactive.snap  template_integration__template_system_noninteractive.snap
src/commands/web/: mod.rs
src/commands/web/locales/: en.toml  zh-CN.toml
src/commands/write/: mod.rs
src/commands/write/locales/: en.toml  zh-CN.toml
src/commands/write/tests/integration/: main.rs
src/config/: mod.rs
src/locales/: en.toml  zh-CN.toml
src/session/: mod.rs
src/web/: mod.rs
tests/integration/: main.rs
tests/integration/snapshots/: integration__doit_help_output.snap  integration__doit_help_output.snap.new  integration__en.snap  integration__zh_cn.snap
web/: .gitignore  package.json  svelte.config.js
web/src/: app.css  app.html
web/src/lib/: ConfigPanel.svelte  Markdown.svelte  Terminal.svelte  XtermOutput.svelte  ansi.js  entries.js  session.svelte.js
web/src/lib/components/: CommandView.svelte  Composer.svelte  ConfigPanel.svelte  ConversationEntry.svelte  ConversationList.svelte  EntryBody.svelte  EntryShell.svelte  Markdown.svelte  SettingsModal.svelte  StatusBar.svelte  TextBody.svelte
web/src/routes/: +layout.js  +page.svelte
