[package]
name = "doit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.3"
rust-i18n = "4.0.0"
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.2.1"
insta = { version = "1.47.2", features = ["json", "filters"] }
regex = "1.12.3"
tempfile = "3.27.0"

[[test]]
name = "prompt_integration"
path = "src/commands/prompt/tests/integration/main.rs"

[[test]]
name = "exit_integration"
path = "src/commands/exit/tests/integration/main.rs"

[[test]]
name = "glob_integration"
path = "src/commands/glob/tests/integration/main.rs"

[[test]]
name = "read_integration"
path = "src/commands/read/tests/integration/main.rs"

[[test]]
name = "search_integration"
path = "src/commands/search/tests/integration/main.rs"

[[test]]
name = "write_integration"
path = "src/commands/write/tests/integration/main.rs"

[[test]]
name = "edit_integration"
path = "src/commands/edit/tests/integration/main.rs"

[[test]]
name = "exec_integration"
path = "src/commands/exec/tests/integration/main.rs"

[[test]]
name = "template_integration"
path = "src/commands/template/tests/integration/main.rs"
