[package]
name = "doit"
version = "0.1.0"
edition = "2024"
description = "A shell-first AI agent — one tool, all tasks"
license = "MIT"
repository = "https://github.com/LaneSun/doit"
documentation = "https://github.com/LaneSun/doit/blob/main/README.md"
homepage = "https://github.com/LaneSun/doit"
keywords = ["ai", "agent", "cli", "shell", "llm"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.91"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures-util = "0.3.31"
glob = "0.3.3"
libc = "0.2.186"
miette = { version = "7.6.0", features = ["fancy"] }
mime_guess = "2.0.5"
nix = { version = "0.31.3", features = ["term", "signal", "event", "fs"] }
portable-pty = "0.9.0"
reedline = "0.43.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
rust-embed = { version = "8.11.0", features = ["mime-guess"] }
rust-i18n = "4.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tower-http = { version = "0.6.11", features = ["fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.2.1"
insta = { version = "1.47.2", features = ["json", "filters"] }
regex = "1.12.3"
tempfile = "3.27.0"

[[test]]
name = "prompt_integration"
path = "src/commands/prompt/tests/integration/main.rs"

[[test]]
name = "exit_integration"
path = "src/commands/exit/tests/integration/main.rs"

[[test]]
name = "glob_integration"
path = "src/commands/glob/tests/integration/main.rs"

[[test]]
name = "read_integration"
path = "src/commands/read/tests/integration/main.rs"

[[test]]
name = "search_integration"
path = "src/commands/search/tests/integration/main.rs"

[[test]]
name = "write_integration"
path = "src/commands/write/tests/integration/main.rs"

[[test]]
name = "edit_integration"
path = "src/commands/edit/tests/integration/main.rs"

[[test]]
name = "exec_integration"
path = "src/commands/exec/tests/integration/main.rs"

[[test]]
name = "template_integration"
path = "src/commands/template/tests/integration/main.rs"
